--- a/admin.html
+++ b/admin.html
@@ -17,14 +17,21 @@
     <style>
         body {
             padding-top: 54px;
+            background: #606c88;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #3f4c6b, #606c88);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
-
+        .white{
+            color:azure;
+        }
         @media (min-width: 992px) {
             body {
                 padding-top: 56px;
             }
         }
-
     </style>
 
 </head>
@@ -37,10 +44,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Water-PooL</h1>
-                <p class="lead text-center">water consumption billing system</p>
+                <h1 class="text-center white">Water-PooL</h1>
+                <p class="lead text-center white">water consumption billing system</p>
                 <div class="row">
-                    <div class="col-6 offset-3">
+                    <div class="col-lg-6 offset-lg-3">
                         <div class="card">
                             <div class="card-header text-center">
                                 Invoice
@@ -73,13 +80,13 @@
                                                 <input type="text" class="form-control" id="inread" placeholder="in Litre">
                                             </div>
                                         </div>
-                                         <div class="form-group row">
+                                        <div class="form-group row">
                                             <label for="eread" class="col-sm-5 col-form-label">End Reading</label>
                                             <div class="col-sm-7">
                                                 <input type="text" class="form-control" id="eread" placeholder="in Litre">
                                             </div>
                                         </div>
-                                         <div class="form-group row">
+                                        <div class="form-group row">
                                             <label for="tmc" class="col-sm-5 col-form-label">Total Consumption</label>
                                             <div class="col-sm-7">
                                                 <input type="text" class="form-control" id="tmc" placeholder="in Litre">
@@ -88,13 +95,13 @@
 
                                     </div>
                                     <hr>
-                                     <div class="form-group row">
+                                    <div class="form-group row">
                                         <label for="cost" class="col-sm-4 col-form-label">Current Cost/Litre</label>
                                         <div class="col-sm-8">
                                             <input type="text" class="form-control" id="cost" placeholder="Current Cost/Litre">
                                         </div>
                                     </div>
-                                      <div class="form-group row">
+                                    <div class="form-group row">
                                         <label for="Bill Amount" class="col-sm-4 col-form-label">Bill Amount</label>
                                         <div class="col-sm-8">
                                             <input type="text" class="form-control" id="cost" placeholder="in Rupees">
