--- a/user.html
+++ b/user.html
@@ -61,13 +61,13 @@
                                         <tr>
                                             <th scope="row">1</th>
                                             <td>House Number</td>
-                                            <td>82</td>
+                                            <td>21</td>
 
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
                                             <td>Owner Name</td>
-                                            <td>Jacob</td>
+                                            <td>Kumar</td>
 
                                         </tr>
                                         <tr>
